<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tech.unwearable.magicsaltunwearable.MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/spinner_updater"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="updateColors"
                android:text="Update Color Options" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color_spinner"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_updater"
            android:baselineAligned="false"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_weight=".3"
                android:text="@string/set_light_color" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight=".6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/color_spinner"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_weight="0.3"
                android:text="@string/message"
                android:labelFor="@+id/messageText"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <EditText
                android:id="@id/messageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="sendMessage"
            android:text="@string/send_message" />

        <Button
            android:id="@+id/colorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="27dp"
            android:onClick="sendColor"
            android:text="@string/send_color" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_notifications"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:onClick="enableNotifications"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
